microconfig-core/src/test/resources/repo/components/exceptions/bad/badDelimeter/exception.prop
Incorrect delimiter 'keyvalue' in ../components/exceptions/bad/badDelimeter/application.prop.properties:1.
Property must contain ':' or '=' as delimiter.